--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       <p class="username">@victot.exe</p>
       <ul>
         <li>
-          <a href="" target="_blank">📷 Instagram</a>
+          <a href="instagram.com/victot.exe" target="_blank">📷 Instagram</a>
         </li>
         <li>
-          <a href="" target="_blank">🐦 Twitter</a>
+          <a href="twitter.com/victor_eexe" target="_blank">🐦 Twitter</a>
         </li>
         <li>
-          <a href="" target="_blank">🐱 GitHub</a>
+          <a href="github.com/VictotEXE" target="_blank">🐱 GitHub</a>
         </li>
       </ul>
       <footer>Ta olhando o que hein?<br>Feito na maratona da 
